docs/3.0/src/components/optimize/changes.md
---
title: Optimize Change Log

---

## Version 3.0 {#v3-0}

### v3.0.3 {#v3-0-3}

* Update compiles list for `orchestra/foundation` and `orchestra/support`.

### v3.0.2 {#v3-0-2}

* Update compiles list for `orchestra/foundation`.

### v3.0.1 {#v3-0-1}

* Add multiple boostrap, filter and middleware classes.
* Add `Orchestra\Foundation\Support\Providers\RouteServiceProvider`.
* Add `Orchestra\Foundation\Support\Providers\ExtensionRouteServiceProvider`.

### v3.0.0 {#v3-0-0}

* Update support to Laravel Framework v5.0.
* Simplify PSR-4 path.
* Add `orchestra/kernel` compile classes.
* Skip and avoid marking as missing when package directory is not available.

## Version 2.2 {#v2-2}

### v2.2.1 {#v2-2-1}

* Add `orchestra/messages` compile classes.
* Update `orchestra/debug` compile classes.

### v2.2.0 {#v2-2-0}

* Bump minimum version to PHP v5.4.0.
* Rename Environment to Factory.

## Version 2.1 {#v2-1}

### v2.1.3 {#v2-1-3}

* Remove models from compiled list to avoid bad deployment.

### v2.1.2 {#v2-1-2}

* Rename `Orchestra\Facile\Response` to `Orchestra\Facile\Container`.
* Add `Orchestra\Support\Contracts\CsvableInterface`.
* Add `Orchestra\Support\Collection`.

### v2.1.1 {#v2-1-1}

* Implement [PSR-4](https://github.com/php-fig/fig-standards/blob/master/proposed/psr-4-autoloader/psr-4-autoloader.md) autoloading structure.

### v2.1.0 {#v2-1-0}

* Update code to support Orchestra Platform 2.1 and Laravel 4.1
* Add `orchestra/notifier`.

## Version 2.0 {#v2-0}

### v2.0.2 {#v2-0-2}

* Refactor code and separate task outside of command.

### v2.0.1 {#v2-0-1}

* Add `Orchestra\Foundation\Abstractable\RouteManager`.

### v2.0.0 {#v2-0-0}

* Initial release, based on `php artisan optimize` functionality.
